--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: https://come-and-see.github.io/test-kartki-tvitiv/
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
