remove: last changes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kartki-tvitiv",
   "private": true,
-  "homepage": "https://come-and-see.github.io/test-kartki-tvitiv/",
+  "homepage": "https://come-and-see.github.io/test-kartki-tvitiv",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
