--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/[^.]+",
-      "dest": "/",
+      "src": "/(.*)",
+      "dest": "/test-kartki-tvitiv/$1",
       "status": 200
     }
   ]
