--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/test-kartki-tvitiv/$1" }],
-  "routes": [
-    { "src": "/test-kartki-tvitiv/(.*)", "dest": "/test-kartki-tvitiv/$1" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/test-kartki-tvitiv/$1" }]
 }
