--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/test-kartki-tvitiv/$1" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/test-kartki-tvitiv/$1", "status": 200 }]
 }
